--- a/css/common.css
+++ b/css/common.css
@@ -12,13 +12,16 @@
 }
 
 .slider-ui {
+  display: inline-block;
   padding-top: 7px;
+  cursor: default;
 }
 
 .result {
   color: #999;
   font-size: 13px;
   margin: 10px 0 10px;
+  cursor: default;
 }
 
 .quantity {
@@ -28,4 +31,5 @@
 
 .info {
   border-bottom:1px dotted #999;
+  cursor: pointer;
 }
