--- a/css/redis.css
+++ b/css/redis.css
@@ -2,7 +2,7 @@
   margin-right: 20px;
   padding-top: 4px;
 }
-.region-input {
+.region-spinner {
   width: 40px;
   box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
   margin: 0px 20px 2px 10px;
